# sync-subdir

./: .gitignore  Cargo.toml  README.md  README_SH.md  sync-subdir-changes.sh  sync-subdir.sh
src/: cli.rs  error.rs  git.rs  main.rs  sync.rs  tui.rs
sync-subdir-rs/: .gitignore  Cargo.toml  README.md
sync-subdir-rs/src/: cli.rs  git.rs  main.rs  sync.rs  tui.rs
