[package]
name = "sync-subdir"
version = "0.1.0"
edition = "2021"
authors = ["Claude <noreply@anthropic.com>"]
description = "A TUI tool for syncing subdirectory changes between Git repositories"
license = "MIT"

[[bin]]
name = "sync-subdir"
path = "src/main.rs"

[dependencies]
# CLI 参数解析
clap = { version = "4.4", features = ["derive", "color"] }

# Git 操作
git2 = "0.18"

# TUI 界面
crossterm = "0.27"
ratatui = "0.24"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志和进度
tracing = "0.1"
tracing-subscriber = "0.3"

# 文件系统操作
fs_extra = "1.3"
walkdir = "2.3"

# 日期时间
chrono = "0.4"

# 正则表达式
regex = "1.0"

# 串行化
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempdir = "0.3"